Adaugare query parameters pt event si pachet